clean raw scipts and movie conversations

--- a/analysis/movies/analysis_vic.ipynb
+++ b/analysis/movies/analysis_vic.ipynb
@@ -1,22 +1,346 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis Victor"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Movie character"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>characterID</th>\n",
+       "      <th>character name</th>\n",
+       "      <th>movieID</th>\n",
+       "      <th>movie title</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>position</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>u0</td>\n",
+       "      <td>BIANCA</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>10 things i hate about you</td>\n",
+       "      <td>f</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>u2</td>\n",
+       "      <td>CAMERON</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>10 things i hate about you</td>\n",
+       "      <td>m</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>u4</td>\n",
+       "      <td>JOEY</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>10 things i hate about you</td>\n",
+       "      <td>m</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>u5</td>\n",
+       "      <td>KAT</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>10 things i hate about you</td>\n",
+       "      <td>f</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>u6</td>\n",
+       "      <td>MANDELLA</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>10 things i hate about you</td>\n",
+       "      <td>f</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  characterID character name movieID                 movie title gender  \\\n",
+       "0          u0         BIANCA      m0  10 things i hate about you      f   \n",
+       "2          u2        CAMERON      m0  10 things i hate about you      m   \n",
+       "4          u4           JOEY      m0  10 things i hate about you      m   \n",
+       "5          u5            KAT      m0  10 things i hate about you      f   \n",
+       "6          u6       MANDELLA      m0  10 things i hate about you      f   \n",
+       "\n",
+       "  position  \n",
+       "0        4  \n",
+       "2        3  \n",
+       "4        6  \n",
+       "5        2  \n",
+       "6        7  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = 1\n",
-    "b= 2\n",
-    "print(str(a+b))"
+    "character_df = pd.read_csv(\"archive/movie_characters_metadata.tsv\", sep=\"\\t\", header=None)\n",
+    "character_df.columns = [\"characterID\", \"character name\", \"movieID\", \"movie title\", \"gender\", \"position\"]\n",
+    "character_df.dropna(subset=[\"gender\"], inplace=True)\n",
+    "character_df  = character_df[character_df.gender != \"?\"]\n",
+    "character_df[\"gender\"].str.lower()\n",
+    "character_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Movie conversations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>characterID</th>\n",
+       "      <th>characterID2</th>\n",
+       "      <th>movieID</th>\n",
+       "      <th>utterance_list</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>u0</td>\n",
+       "      <td>u2</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>['L194' 'L195' 'L196' 'L197']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>u0</td>\n",
+       "      <td>u2</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>['L198' 'L199']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>u0</td>\n",
+       "      <td>u2</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>['L200' 'L201' 'L202' 'L203']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>u0</td>\n",
+       "      <td>u2</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>['L204' 'L205' 'L206']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>u0</td>\n",
+       "      <td>u2</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>['L207' 'L208']</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  characterID characterID2 movieID                 utterance_list\n",
+       "0          u0           u2      m0  ['L194' 'L195' 'L196' 'L197']\n",
+       "1          u0           u2      m0                ['L198' 'L199']\n",
+       "2          u0           u2      m0  ['L200' 'L201' 'L202' 'L203']\n",
+       "3          u0           u2      m0         ['L204' 'L205' 'L206']\n",
+       "4          u0           u2      m0                ['L207' 'L208']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conversations_df = pd.read_csv(\"archive/movie_conversations.tsv\", sep=\"\\t\", header=None)\n",
+    "conversations_df.columns = [\"characterID\", \"characterID2\", \"movieID\", \"utterance_list\"]\n",
+    "conversations_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Raw scripts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieID</th>\n",
+       "      <th>movie title</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>m0</td>\n",
+       "      <td>10 things i hate about you</td>\n",
+       "      <td>http://www.dailyscript.com/scripts/10Things.html</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>m1</td>\n",
+       "      <td>1492: conquest of paradise</td>\n",
+       "      <td>http://www.hundland.org/scripts/1492-ConquestO...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>m2</td>\n",
+       "      <td>15 minutes</td>\n",
+       "      <td>http://www.dailyscript.com/scripts/15minutes.html</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>m3</td>\n",
+       "      <td>2001: a space odyssey</td>\n",
+       "      <td>http://www.scifiscripts.com/scripts/2001.txt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>m4</td>\n",
+       "      <td>48 hrs.</td>\n",
+       "      <td>http://www.awesomefilm.com/script/48hours.txt</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  movieID                 movie title  \\\n",
+       "0      m0  10 things i hate about you   \n",
+       "1      m1  1492: conquest of paradise   \n",
+       "2      m2                  15 minutes   \n",
+       "3      m3       2001: a space odyssey   \n",
+       "4      m4                     48 hrs.   \n",
+       "\n",
+       "                                                 url  \n",
+       "0   http://www.dailyscript.com/scripts/10Things.html  \n",
+       "1  http://www.hundland.org/scripts/1492-ConquestO...  \n",
+       "2  http://www.dailyscript.com/scripts/15minutes.html  \n",
+       "3       http://www.scifiscripts.com/scripts/2001.txt  \n",
+       "4      http://www.awesomefilm.com/script/48hours.txt  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_scripts_df = pd.read_csv(\"archive/raw_script_urls.tsv\", sep=\"\\t\", header=None)\n",
+    "raw_scripts_df.columns = [\"movieID\", \"movie title\", \"url\"]\n",
+    "raw_scripts_df.head()"
    ]
   }
  ],
